crates/dsrs-macros/tests/ui/field_missing_attr.stderr
error: field must have #[input] or #[output] attribute
 --> tests/ui/field_missing_attr.rs:5:5
  |
5 |     question: String,
  |     ^^^^^^^^^^^^^^^^
